# hyprr

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/hyprland_config/: Cargo.toml
crates/hyprland_config/src/: comment.rs  lib.rs  section.rs  util.rs  variable.rs
crates/hyprland_config/tests/: comment.rs  variable.rs
src/: cli.rs  gui.rs  main.rs
src/gui/: app.rs  dropdown_button.rs  scrollable_list.rs  tabs.rs  wrapper_functions.rs
src/gui/tabs/: clients.rs  devices.rs  layers.rs  monitors.rs  templates.rs
