[package]
name = "hyprr"
version = "0.1.0"
edition = "2021"
authors = ["Vitalii Lukyanov <tukanoid@outlook.com>"]

[[bin]]
name = "hyprr"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.2"
enum-iterator = "1.2.0"
dyn-clone = "1.0.9"
downcast-rs = "1.2.0"

#hyprland = "0.3.0"
#hyprland = { path = "../hyprland-rs" }
#hyprland = { git = "https://github.com/tukanoidd/hyprland-rs" }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs" }

socket2 = "0.4.7"
nix = "0.26.1"

log = "0.4.17"
pretty_env_logger = "0.4.0"
paste = "1.0.9"
itertools = "0.10.5"
serde = { version = "1.0.130", features = ["derive"] }
kiam = "0.1.1"

egui = "0.21.0"
eframe = { version = "0.21.3", features = ["persistence"] }